# cvgen

./: .eslintrc.cjs  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
docs/: conversation-summary.md  cv-template-spec.md
python/: main.py  requirements.txt
python/app/: __init__.py
python/app/exporter/: documents.py
python/app/models/: __init__.py  entities.py
python/app/nlp/: adapter.py  keywords.py  offer.py  parser.py
python/app/ocr/: extractor.py
python/app/utils/: serialization.py  text.py
src/: App.tsx  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_engine.rs  exporter.rs  file_import.rs  main.rs  models.rs  python_bridge.rs  state.rs  templates.rs
src-tauri/src/commands/: fs.rs
src/components/: FileDropzone.tsx  HighlightText.tsx  Modal.tsx  Panel.tsx  StageIndicator.tsx  TemplateGallery.tsx
src/components/Cards/: CvPreviewCard.tsx  ResumeSummaryCard.tsx
src/components/Inputs/: TitleInput.tsx
src/components/ResumeTemplates/: RenderResume.tsx  TemplateOne.tsx  TemplateTwo.tsx
src/components/auth/: AuthModal.tsx
src/components/chat/: ChatAssistant.tsx
src/components/layouts/: DashboardLayout.tsx  Navbar.tsx
src/hooks/: useCvFiles.ts  useCvStore.ts
src/lib/: api.ts  utils.ts
src/lib/mock/: resumes.ts
src/pages/: LandingPage.tsx
src/styles/: index.css
src/templates/: loadFallbackManifest.ts  types.ts  useTemplates.ts
src/types/: global.d.ts  index.ts
src/utils/: profileMappers.ts
templates/: manifest.json
(+23 files in other folders)
