[package]
name = "cvgen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-all", "dialog-all", "fs-all"] }
uuid = { version = "1.10", features = ["v4", "serde", "std"] }
thiserror = "1.0"
once_cell = "1.19"
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "macros", "time", "process"] }
parking_lot = "0.12"
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
